---
source: crates/math-core/tests/error_test.rs
expression: x__3
---
Position: 2, width: 1
BoundFollowedByBound
